[package]
name = "apt-decoder"
version = "1.0.1"
authors = ["Sebastian <sebastian@sebastians-site.de>"]

[dependencies]
clap = {version = "4.0.0", features = ["cargo"]}
indicatif = "0.16.2"
hound = "3.4.0"
image = "0.24.0"
eframe = {version = "0.18.0", optional = true}
rfd = "0.11.4"
thiserror = "1.0.30"


[features]
# Defines a feature named `webp` that does not enable any other features.
default = ["ui"]
ui = ["eframe"]
