[package]
name = "apt-decoder"
version = "1.0.1"
authors = ["Sebastian <sebastian@sebastians-site.de>"]

[dependencies]
clap = {version = "4.5", features = ["cargo"]}
indicatif = "0.17"
hound = "3.5"
image = "0.24"
eframe = {version = "0.30", optional = true}
rfd = {version = "0.15", default-features = false, features = ["gtk3"]}
thiserror = "1"


[features]
# Defines a feature named `webp` that does not enable any other features.
default = ["ui"]
ui = ["eframe"]
